# nsf4

./: .env  .gitignore  DOCKERFILE.frontend  LICENSE  docker-compose.yaml  drone-simulation.py  eslint.config.mjs  lite-package.json  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
app/: layout.tsx  page.tsx  providers.tsx  s2c.ts  webrtcService.ts
app/components/: map.tsx  navbar.tsx  search-context.tsx  searchbar.tsx  theme-switch.tsx
app/feed/: feed-get.ts  mock-data.ts  page.tsx
app/helpers/: usePrevious.ts
app/map/: page.tsx
app/network/: add-drone.ts  consts.ts  drone.ts  feed-get.ts  get-video-data.ts  mock-data.ts
app/types/: api.ts
app/watch/[video]/: page.tsx
backend/: .README  .dockerignore  .env  .env.example  .gitignore  Cargo.toml  DOCKERFILE  README.md  build-image.sh  run-container.sh
backend/logs/: application.log.2025-05-25
backend/migrations/: 20230101000000_create_videos_table.sql  20240524000000_update_thumbnail_to_longtext.sql  20240525000000_increase_created_at_length.sql  20250525000001_add_drone_url_fields.sql
backend/src/: config.rs  http_api.rs  main.rs  messages.rs  models.rs  reciever.rs  rtmp_server.rs  rtsp_server.rs  sender.rs  signaling.rs  webrtc_handler.rs
backend/src/api/: drones.rs  feed.rs  handlers.rs  mod.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs
backend/src/models/: mod.rs
backend/src/redis/: mod.rs
backend/src/rtmp/: mod.rs
backend/src/services/: drone_client.rs  mod.rs
backend/src/websocket/: mod.rs
backend/src/ws/: connection.rs  mod.rs  server.rs
components/: navbar.tsx  searchbar.tsx
node/: DOCKERFILE  package.json  server.cjs
src-tauri/: tauri.conf.json
