[package]
name = "nsf_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
xai = "0.0.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
gstreamer = "0.20"
gstreamer-rtsp-server = "0.20"
tokio-util = "0.7"
bytes = "1.0"

