[package]
name = "nsf_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["json", "ws"] }
axum-server = "0.7.2"
chrono = "0.4.41"
futures = "0.3.31"
lazy_static = "1.4.0"
rml_rtmp = "0.8.0"
serde = "1.0.219"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "chrono", "uuid", "migrate"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
rand = "0.9.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
url = "2.5.4" 
uuid = { version = "1.17.0", features = ["v4"] }
websocket = "0.27.1"
base64 = "0.22.1"
redis = { version = "0.31.0", features = ["tokio-comp", "json"] }